# kriol

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  install.sh  main.cc  main.cpp  parser.cc  parser.hh  run_tests.sh  scanner.cc
.github/workflows/: ci.yml  release.yml
browser/: README.md
cmake/: BoehmGC.cmake  EmbeddedResources.cmake
docs/: kriol-lang-spec.md
examples/: example01.kl  example02.kl  example03.kl  fibonacci-recursive.kl  fibonacci_recursive.kriol  hello-world.kl  mensage_special.kriol  min.kriol  ola.kriol  ola.kriol.stdin  pessoas.kriol  pessoas.kriol.stdin  soma.kriol
include/kriol/: ast.hh  cbinds.hh  cli.hh  cnst.hh  codegen.hh  constants.hh  prelude.hh  sema.hh  type.hh  type_utils.hh
rules/: parser.y  scanner.l
runtime/: kriol_runtime.c
scripts/: build-ubuntu-26.04-container.sh
src/kriol/: ast.cc  browser_api.cc  cli.cc  codegen.cc  codegen_prelude.cc  sema.cc
tests/: README.md
tests/api/: compile_memory.cc  type_model.cc
tests/fail/: fail_arg_type_mismatch.kl  fail_array_init_size_mismatch.kl  fail_array_init_type_mismatch.kl  fail_array_size_too_large.kr  fail_bare_array_without_array_target.kr  fail_break_outside_loop.kl  fail_compound_assign_uninitialized.kr  fail_compound_assignment_molda.kr  fail_compound_assignment_text.kr  fail_continue_outside_loop.kl  fail_duplicate_function.kl  fail_duplicate_variable.kl  fail_for_initializer_scope.kr  fail_fstring_undefined_var.kl  fail_if_initializer_scope.kr  fail_import_not_supported.kr  fail_inisiu_with_params.kr  fail_inisiu_with_return_type.kr  fail_int_literal_out_of_range.kr  fail_invalid_assignment_target.kr  fail_member_access_not_supported.kr  fail_method_receiver_not_mim.kl  fail_missing_inisiu.kr  fail_missing_return.kl  fail_molda_array_fstring.kr  fail_molda_array_print.kr  fail_molda_dipoz_use_before_init.kr  fail_molda_empty.kr  fail_molda_field_assignment_not_supported.kr  fail_molda_field_type_mismatch.kr  fail_molda_lowercase_name.kr  fail_molda_missing_field.kr  fail_molda_print_record.kr  fail_molda_unknown_field.kr  fail_molda_unknown_type.kr  fail_mostra_malformed_interpolation.kl  fail_nested_function.kr  fail_nested_struct_decl.kl  fail_not_non_bool.kr  fail_partial_return.kl  (+24 more)
tests/fuzz/: compile_fuzz_driver.hh  compile_fuzz_smoke.cc  compile_fuzzer.cc  compile_random_fuzz.cc
tests/pass/: array_basic.kl  array_initializer.kl  array_partial_initialized_index_use.kl  array_print.kl  complete_if_return.kl  control_initializers.kr  divolvi_in_inisiu.kr  for_loop.kl  int_literal_contextual_integer_ops.kr  int_to_double_autocast.kl  konfirma_pass.kl  modulo_operator.kr  molda_array_field_literal.kr  molda_basic.kr  molda_dipoz.kr  molda_field_assignment.kr  molda_getter_and_copy.kr  molda_nested_field_array_molda.kr  molda_nested_field_assignment.kr  molda_return_chain.kr  molda_value_copy_param.kr  mostra_escape_braces.kl  mostra_interpolation.kl  mostra_types.kl  mostran_newline.kl  nested_functions.kl  no_space_binary_ops.kr  postfix_parenthesized.kr  primitive_abi_types.kr  short_circuit_eval.kr  single_quote_strings_with_interpolation.kl  statements_after_jump.kr  string_print.kl  struct_methods_mim.kl  struct_null_pointer.kl  toma_basic.kr  toma_prompt.kr  typed_array_literal.kr  unary_minus.kl  unary_not.kl  (+1 more)
tests/runtime/: gc_stress.c
